fixed footer spacing issues

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -3,7 +3,7 @@
 }
 
 .footer__area {
-  width: 70%;
+  width: 900px;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
@@ -17,7 +17,9 @@
   font-family: 'Josefin Sans', sans-serif;
   color: $grey;
   &:last-of-type {
-    padding-right: 0;
+    padding: 50px 0 0 30px;
+    margin-right: 0;
+    justify-content: center;
   }
 }
 
@@ -27,7 +29,7 @@
 
 .footer__section-form {
   display: flex;
-  align-items: center;
+  flex-direction: column;
 }
 
 .footer__title {
